tests/fixtures/invalid/pow_none_list_bytes.py
# Cannot call pow() with None, List[int], Bytes
x = pow(None, [1, 2, 3], b"hello")
